# MapRepair

./: .env.example  .gitignore  README.md  batch_run.py  conflict_detector.py  conflict_localizer.py  edge_impact_scorer.py  llm_agent.py  mango_dataset.py  map_slam_system.py  navigation_graph.py  pyproject.toml  requirements.txt  temporal_dependency_graph.py  test_pipeline.py  version_control.py
experiments/: aggregate_all.py  exp01_localization.py  exp02_scoring.py  exp03_heuristic_repair.py  exp04_llm_repair_synthetic.py  exp05_mango_llm.py  exp06_difficulty_curves.py  exp07_heuristic_on_mango.py  exp08_heuristic_remove.py  exp09_heuristic_vs_llm.py  exp10_conflict_analysis.py  exp11_build_clean_walkthroughs.py  exp11b_strict_clean.py  exp11c_gt_aligned_clean.py  exp12_eval_only.py  exp12_remap_on_v3_clean.py  exp13_error_analysis.py  exp14_remap_v3_fixed.py  exp16_noise.py  exp16_run.py  exp17_llm_ablation.py  exp18_llm_deep.py  exp19_llm_full_pipeline.py  exp20_mango_repair_e2e.py  exp20b_filtered.py  exp21_textworld_pilot.py  exp22_multimodel.py  exp23_textworld_noise.py  exp24_compute_kappa.py  exp24_human_validation_sample.py  exp25_frontier_2026.py  exp26_frontier_textworld.py  exp26b_claude_textworld.py  exp27_table1_rerun.py  exp28_verify_tc16.py  exp29_complementary_roles.py  exp30b_vcei_and_heuristic.py  exp30c_full_mango_sweep.py  exp31_iter_sensitivity.py
results/: FINAL_REPORT.json  FINAL_REPORT.md
tests/: test_conflict.py  test_graph.py  test_heuristic.py  test_history.py  test_llm_agent_smoke.py  test_localizer.py  test_mango.py  test_mapping.py  (+2 more)
(+976 files in other folders)
