[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maprepair-polish"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.30",
  "tenacity>=8.2",
  "networkx>=3.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
